--- a/.github/worksflows/ci.yml
+++ b/.github/worksflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
-          cache: 'gradle'
+          cache: gradle
       - name: Touch property
         run: touch local.properties
       - name: Create Google Services JSON File
