--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+# Google Services (e.g. APIs or Firebase)
+/app/src/google-services.json
+/app/src/google-services.json.base64
